--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,49 @@ h2 {
 .aboutus {
     padding:14px;
 }
+/* TESTING CENTER */
+.readparent{
+    position: relative;
+}
+.readmore{
+    
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(150, 143, 143, 0.5);
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    line-height: 300px;
+    display: none;
+ 
+}
+.readmore a{
+    color: #fff;
+}
 
 .des {
     text-align: center;
     margin-bottom: 40px;
     margin-top: -34px;
+}
+#pro{
+    position: relative;
+}
+.pro-text span{
+    padding-left: 30px;
+    padding-right: 30px;
+    position: absolute;
+    bottom: 13px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    color: #fff;
+    background:url('../img/btn.gif') no-repeat 228px;
+    display: none;
+    
 }
 
 .footer {
@@ -92,3 +130,4 @@ h2 {
 .navbar-default .navbar-brand{
     color: #fff;
 }
+
